@@ -69,7 +69,7 @@ public class BBServer {
 
         for (EndPoint endPoint: endPoints) {
             logger.info("Starting {}:{}", endPoint.bbs.getSimpleName(), endPoint.port);
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 Thread.currentThread().setName("BBS Dispatcher-" + Thread.currentThread().getId());
                 try (ServerSocket listener = new ServerSocket(endPoint.port)) {
                     listener.setSoTimeout(0);
@@ -97,22 +97,22 @@ public class BBServer {
                         io.socket = socket;
 
                         thread.keepAliveTimeout = thread.keepAliveTimeout <= 0 ? timeout : thread.keepAliveTimeout;
-                        thread.start();
+                        Thread.ofVirtual().start(thread);
                     }
                 } catch (Exception e) {
                     throw new RuntimeException(e);
                 }
-            }).start();
+            });
         }
 
         if (servicePort != 0)
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 Thread.currentThread().setName("Diagnostic Dispatcher-" + Thread.currentThread().getId());
                 try (ServerSocket listener = new ServerSocket(servicePort)) {
                     listener.setSoTimeout(0);
                     while (true) {
                         Socket socket = listener.accept();
-                        new Thread(() -> {
+                        Thread.ofVirtual().start(() -> {
                             Thread.currentThread().setName("Diagnostic-" + Thread.currentThread().getId());
                             try {
                                 PrintWriter out = new PrintWriter(socket.getOutputStream(), true);
@@ -122,12 +122,14 @@ public class BBServer {
                             } catch (IOException e) {
                                 logger.error(e);
                             }
-                        }).start();
+                        });
                     }
                 } catch (Exception e) {
                     throw new RuntimeException(e);
                 }
-            }).start();
+            });
+
+        Thread.currentThread().join();
     }
 
     private static void readParameters(String[] args) {
